--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Work+Sans:ital,wght@0,400;0,500;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>Travello</title>
 </head>
 <body>
     
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="assets/images/logo.png" alt="Travello">
+                <span>Travello</span>
+            </div>
+            <div class="header_right_content">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Why Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Trips</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header_contact_button theme_button">
+                    <a href="tel:999999999">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </header>
 
-<h1>Hello</h1>
+    <section class="hero">
+        <figure>
+            <img src="assets/images/hero.jpg" alt="">
+        </figure>
+        <div class="container">
+            <div class="hero_wrap">
+                <h1 class="page_title">Explore new places with travello</h1>
+                <div class="page_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</div>
+                <div class="hero_button theme_button">
+                    <a href="#">Get Started</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    
 </body>
 </html>
