about us section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Work+Sans:ital,wght@0,400;0,500;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Travello</title>
 </head>
@@ -57,5 +57,26 @@
         </div>
     </section>
 
+    <section class="about_us">
+        <div class="container">
+            <div class="about_left">
+                <figure>
+                    <img src="assets/images/about_big.jpg" alt="" class="about_big">
+                    <img src="assets/images/about_small.jpg" alt="" class="about_small">
+                </figure>
+            </div>
+            <div class="about_right">
+                <h2 class="section_title">About us</h2>
+                <h3 class="block_title">Explore world with us</h3>
+                <div class="section_text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ullam dignissimos, labore doloremque ad provident ut debitis iste eos corporis?</p>
+                </div>
+                <div class="theme_button">
+                    <a href="#">Get Started</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
