benefits added, benefits 3d animation added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Travello</title>
 </head>
 <body>
-    
     <header>
         <div class="container">
             <div class="logo">
@@ -74,6 +73,33 @@
                 </div>
                 <div class="theme_button">
                     <a href="#">Get Started</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="benefits">
+        <div class="container">
+            <div class="benefits_list">
+                <div class="benefit_item">
+                    <img src="assets/images/benefit1.png" alt="" class="benefit_icon">
+                    <div class="benefit_title">Full Guide</div>
+                    <div class="benefit_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
+                <div class="benefit_item">
+                    <img src="assets/images/benefit2.png" alt="" class="benefit_icon">
+                    <div class="benefit_title">Transport</div>
+                    <div class="benefit_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
+                <div class="benefit_item">
+                    <img src="assets/images/benefit3.png" alt="" class="benefit_icon">
+                    <div class="benefit_title">Easy Book</div>
+                    <div class="benefit_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
+                <div class="benefit_item">
+                    <img src="assets/images/benefit4.png" alt="" class="benefit_icon">
+                    <div class="benefit_title">Camp Fire</div>
+                    <div class="benefit_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                 </div>
             </div>
         </div>
